# riggy

./: .gitignore  AGENTS.md  BFO_CCO_TEXT_ADVENTURE_DESIGN.md  Cargo.toml  README.md
bfo/: BFO_CCO_INHERITANCE_MAP.md  CONFORMANCE_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN.md  TTL_MIGRATION_PLAN.md  TTL_ONLY_REWRITE_PLAN.md  build.rs
bfo/build_support/: cco_codegen.rs
bfo/src/: lib.rs
docs/: architecture-roadmap.md  text-game-plan.md
examples/: bfo_cco_demo.rs
riggy_model/: Cargo.toml
riggy_model/src/: graph_ecs.rs  invariants.rs  lib.rs  records.rs  world.rs
riggy_ontology/: Cargo.toml
riggy_ontology/src/: lib.rs  relation.rs  seed.rs  terms.rs
src/: cli.rs  graph_ecs.rs  headless.rs  lib.rs  llm.rs  logging.rs  main.rs  presenter.rs  simulation.rs  tui.rs  world.rs
src/ai/: context.rs  mod.rs  policy.rs  prompting.rs  proposals.rs  validation.rs
src/app/: mod.rs  projection.rs  query.rs  read_model.rs  service.rs
src/domain/: commands.rs  events.rs  invariants.rs  memory.rs  mod.rs  ontology.rs  records.rs  relationship.rs  time.rs  vocab.rs
ttl2ofn/: Cargo.toml
ttl2ofn/src/: lib.rs  main.rs
