[package]
name = "riggy"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["bfo", "riggy_model", "riggy_ontology"]

[dependencies]
anyhow = "1.0.100"
bfo = { path = "bfo", version = "0.1.0" }
crossterm = "0.29.0"
futures = "0.3.31"
petgraph = { version = "0.8.3", features = ["serde-1"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
ratatui = "0.30.0"
rig-core = "0.32.0"
riggy_model = { path = "riggy_model", version = "0.1.0" }
riggy_ontology = { path = "riggy_ontology", version = "0.1.0" }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
