[package]
name = "riggy"
version = "0.1.0"
edition = "2024"
autoexamples = false

[workspace]
members = ["bfo", "riggy_model", "riggy_ontology", "ttl2ofn"]

[workspace.package]
authors = ["Codex"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
hex = "0.4"
js-sys = "0.3.85"
memchr = "2.5"
oxilangtag = "0.1"
oxiri = "0.2.11"
oxrdf = { path = "bfo/oxigraph-main/lib/oxrdf" }
oxsdatatypes = { path = "bfo/oxigraph-main/lib/oxsdatatypes" }
oxttl = { path = "bfo/oxigraph-main/lib/oxttl" }
rand = "0.9.2"
rayon = "1.8.1"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10"
tempfile = "3.1"
thiserror = "2.0.12"
tokio = "1.50.0"

[workspace.lints.rust]

[workspace.lints.clippy]

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
futures = "0.3.31"
petgraph = { version = "0.8.3", features = ["serde-1"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
ratatui = "0.30.0"
rig-core = "0.32.0"
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
