[package]
name = "riggy_model"
version = "0.1.0"
edition = "2024"

[dependencies]
bfo = { path = "../bfo", version = "0.1.0" }
petgraph = { version = "0.8.3", features = ["serde-1"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
riggy_ontology = { path = "../riggy_ontology", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
